add attendances and generator swagger
