# cmd/api/controllers/attendance.go
@@ -14,7 +14,7 @@ import (
 //	@Produce		json
 //	@Security		BearerAuth
 //	@Param			id	path		string	true	"ID of Attendance"
-//	@Success		200	{object}	models.Response{body=models.Attendance}
+//	@Success		200	{object}	models.Response{body=models.AttendanceDTO}
 //	@Failure		400	{object}	models.Response
 //	@Failure		401	{object}	models.Response
 //	@Failure		404	{object}	models.Response
@@ -62,7 +62,7 @@ func (a *AttendanceController) GetAttendanceByID(c *fiber.Ctx) error {
 //	@Accept			json
 //	@Produce		json
 //	@Security		BearerAuth
-//	@Success		200	{object}	models.Response{body=[]models.Attendance}
+//	@Success		200	{object}	models.Response{body=[]models.AttendanceDTO}
 //	@Failure		400	{object}	models.Response
 //	@Failure		401	{object}	models.Response
 //	@Failure		422	{object}	models.Response
@@ -105,7 +105,7 @@ func (a *AttendanceController) GetAllAttendances(c *fiber.Ctx) error {
 //	@Produce		json
 //	@Security		BearerAuth
 //	@Param			dateFrom	body		models.DateBetween	true	"Date Between"
-//	@Success		200			{object}	models.Response{body=[]models.Attendance}
+//	@Success		200			{object}	models.Response{body=[]models.AttendanceDTO}
 //	@Failure		400			{object}	models.Response
 //	@Failure		401			{object}	models.Response
 //	@Failure		403			{object}	models.Response
@@ -166,7 +166,7 @@ func (a *AttendanceController) GetAllAttendancesByDate(c *fiber.Ctx) error {
 //	@Produce		json
 //	@Security		BearerAuth
 //	@Param			employee_id	path		string	true	"ID of Employee"
-//	@Success		200			{object}	models.Response
+//	@Success		200			{object}	models.Response{body=[]models.AttendanceDTO}
 //	@Failure		400			{object}	models.Response
 //	@Failure		401			{object}	models.Response
 //	@Failure		403			{object}	models.Response
@@ -390,4 +390,64 @@ func (a *AttendanceController) DeleteAttendance(c *fiber.Ctx) error {
 }
 
 
+// UpdatePayAttendance godoc
+//	@Summary		Update Pay Attendance
+//	@Description	Update Pay Attendance by listID
+//	@Tags			Attendance
+//	@Accept			json
+//	@Produce		json
+//	@Security		BearerAuth
+//	@Param			listIds	body		models.UpdatePay	true	"listID of Attendance"
+//	@Success		200		{object}	models.Response
+//	@Failure		400		{object}	models.Response
+//	@Failure		401		{object}	models.Response
+//	@Failure		403		{object}	models.Response
+//	@Failure		404		{object}	models.Response
+//	@Failure		422		{object}	models.Response
+//	@Failure		500		{object}	models.Response
+//	@Router			/attendance/update_pay [put]
+func (a *AttendanceController) UpdatePay(c *fiber.Ctx) error {
+	logging.INFO("Actualizando estado de pagos de asistencia")
+	var updatePay models.UpdatePay
+	if err := c.BodyParser(&updatePay); err != nil {
+		logging.ERROR("Error: %s", err.Error())
+		return c.Status(fiber.StatusBadRequest).JSON(models.Response{
+			Status:  false,
+			Body:    nil,
+			Message: "Invalid request" + err.Error(),
+		})
+	}
+	if err := updatePay.Validate(); err != nil {
+		logging.ERROR("Error: %s", err.Error())
+		return c.Status(fiber.StatusBadRequest).JSON(models.Response{
+			Status:  false,
+			Body:    nil,
+			Message: err.Error(),
+		})
+	}
 
+	err := a.AttendanceService.AttendanceUpdatePay(updatePay.ListIDs)
+	if err != nil {
+		if errResp, ok := err.(*models.ErrorStruc); ok {
+			logging.ERROR("Error: %s", errResp.Err.Error())
+			return c.Status(errResp.StatusCode).JSON(models.Response{
+				Status:  false,
+				Body:    nil,
+				Message: errResp.Message,
+			})
+		}
+		logging.ERROR("Error: %s", err.Error())
+		return c.Status(fiber.StatusInternalServerError).JSON(models.Response{
+			Status:  false,
+			Body:    nil,
+			Message: "Error interno",
+		})
+	}
+
+	logging.INFO("Pago de las Asistencias actualizada con éxito")
+	return c.Status(200).JSON(models.Response{
+		Status:  true,
+		Body:    nil,
+		Message: "Pagos actualizados con éxito",
+	})
+}
