# cmd/api/docs/swagger.json
@@ -188,7 +188,7 @@
                                         "body": {
                                             "type": "array",
                                             "items": {
-                                                "$ref": "#/definitions/models.Attendance"
+                                                "$ref": "#/definitions/models.AttendanceDTO"
                                             }
                                         }
                                     }
@@ -272,7 +272,7 @@
                                         "body": {
                                             "type": "array",
                                             "items": {
-                                                "$ref": "#/definitions/models.Attendance"
+                                                "$ref": "#/definitions/models.AttendanceDTO"
                                             }
                                         }
                                     }
@@ -344,7 +344,22 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.Response"
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/models.Response"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "body": {
+                                            "type": "array",
+                                            "items": {
+                                                "$ref": "#/definitions/models.AttendanceDTO"
+                                            }
+                                        }
+                                    }
+                                }
+                            ]
                         }
                     },
                     "400": {
@@ -455,6 +470,81 @@
                 }
             }
         },
+        "/attendance/update_pay": {
+            "put": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Update Pay Attendance by listID",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Attendance"
+                ],
+                "summary": "Update Pay Attendance",
+                "parameters": [
+                    {
+                        "description": "listID of Attendance",
+                        "name": "listIds",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.UpdatePay"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.Response"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/models.Response"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/models.Response"
+                        }
+                    },
+                    "403": {
+                        "description": "Forbidden",
+                        "schema": {
+                            "$ref": "#/definitions/models.Response"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/models.Response"
+                        }
+                    },
+                    "422": {
+                        "description": "Unprocessable Entity",
+                        "schema": {
+                            "$ref": "#/definitions/models.Response"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/models.Response"
+                        }
+                    }
+                }
+            }
+        },
         "/attendance/{id}": {
             "get": {
                 "security": [
@@ -494,7 +584,7 @@
                                     "type": "object",
                                     "properties": {
                                         "body": {
-                                            "$ref": "#/definitions/models.Attendance"
+                                            "$ref": "#/definitions/models.AttendanceDTO"
                                         }
                                     }
                                 }
@@ -5756,6 +5846,15 @@
                 "amount": {
                     "type": "number"
                 },
+                "attendance": {
+                    "type": "string",
+                    "enum": [
+                        "presente",
+                        "tarde",
+                        "parcial",
+                        "ausente"
+                    ]
+                },
                 "created_at": {
                     "type": "string"
                 },
@@ -5778,14 +5877,8 @@
                 "is_holiday": {
                     "type": "boolean"
                 },
-                "role": {
-                    "type": "string",
-                    "enum": [
-                        "presente",
-                        "tarde",
-                        "parcial",
-                        "ausente"
-                    ]
+                "is_paid": {
+                    "type": "boolean"
                 },
                 "updated_at": {
                     "type": "string"
@@ -5804,6 +5897,15 @@
                     "type": "number",
                     "example": 1234.56
                 },
+                "attendance": {
+                    "type": "string",
+                    "enum": [
+                        "presente",
+                        "tarde",
+                        "parcial",
+                        "ausente"
+                    ]
+                },
                 "date": {
                     "type": "string",
                     "example": "2022-01-01"
@@ -5820,15 +5922,41 @@
                     "type": "boolean",
                     "default": false,
                     "example": false
+                }
+            }
+        },
+        "models.AttendanceDTO": {
+            "type": "object",
+            "properties": {
+                "amount": {
+                    "type": "number"
                 },
-                "role": {
-                    "type": "string",
-                    "enum": [
-                        "presente",
-                        "tarde",
-                        "parcial",
-                        "ausente"
-                    ]
+                "attendance": {
+                    "type": "string"
+                },
+                "created_at": {
+                    "type": "string"
+                },
+                "date": {
+                    "type": "string"
+                },
+                "employee_id": {
+                    "type": "string"
+                },
+                "hours": {
+                    "type": "integer"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "is_holiday": {
+                    "type": "boolean"
+                },
+                "is_paid": {
+                    "type": "boolean"
+                },
+                "updated_at": {
+                    "type": "string"
                 }
             }
         },
@@ -5844,6 +5972,15 @@
                 "amount": {
                     "type": "number",
                     "example": 1234.56
+                },
+                "attendance": {
+                    "type": "string",
+                    "enum": [
+                        "presente",
+                        "tarde",
+                        "parcial",
+                        "ausente"
+                    ]
                 },
                 "date": {
                     "type": "string",
@@ -5865,15 +6002,6 @@
                     "type": "boolean",
                     "default": false,
                     "example": false
-                },
-                "role": {
-                    "type": "string",
-                    "enum": [
-                        "presente",
-                        "tarde",
-                        "parcial",
-                        "ausente"
-                    ]
                 }
             }
         },
@@ -7233,6 +7361,25 @@
                 },
                 "user_create": {
                     "$ref": "#/definitions/models.UserCreate"
+                }
+            }
+        },
+        "models.UpdatePay": {
+            "type": "object",
+            "required": [
+                "list_ids"
+            ],
+            "properties": {
+                "list_ids": {
+                    "type": "array",
+                    "minItems": 1,
+                    "items": {
+                        "type": "string"
+                    },
+                    "example": [
+                        "123e4567-e89b-12d3-a456-426614174000",
+                        "123e4567-e89b-12d3-a456-426614174000"
+                    ]
                 }
             }
         },
